clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000706_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000706-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn bar(%arg2: rec_baz*, %arg3: s32i, %arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: rec_baz*, %arg3: s32i, %arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i):
        %27 = alloca rec_baz*, "x", align 8
        %28 = alloca s32i, "f", align 4
        %29 = alloca s32i, "g", align 4
        %30 = alloca s32i, "h", align 4
        %31 = alloca s32i, "i", align 4
        %32 = alloca s32i, "j", align 4
        store %arg2, %27
        store %arg3, %28
        store %arg4, %29
        store %arg5, %30
        store %arg6, %31
        store %arg7, %32
        scope {
                %33 = load %27 : rec_baz*, align 8
                get_member
                %35 = load %34 : s32i, align 4
                %36 = const 1 : s32i
                cmp
                %38 = ternary %37 ? { : bool
                        %91 = const true : bool
                        yield %91
                } : {
                        %86 = load %27 : rec_baz*, align 8
                        get_member
                        %88 = load %87 : s32i, align 4
                        %89 = const 2 : s32i
                        cmp
                        yield %90
                }
                %39 = ternary %38 ? { : bool
                        %85 = const true : bool
                        yield %85
                } : {
                        %80 = load %27 : rec_baz*, align 8
                        get_member
                        %82 = load %81 : s32i, align 4
                        %83 = const 3 : s32i
                        cmp
                        yield %84
                }
                %40 = ternary %39 ? { : bool
                        %79 = const true : bool
                        yield %79
                } : {
                        %74 = load %27 : rec_baz*, align 8
                        get_member
                        %76 = load %75 : s32i, align 4
                        %77 = const 4 : s32i
                        cmp
                        yield %78
                }
                %41 = ternary %40 ? { : bool
                        %73 = const true : bool
                        yield %73
                } : {
                        %68 = load %27 : rec_baz*, align 8
                        get_member
                        %70 = load %69 : s32i, align 4
                        %71 = const 5 : s32i
                        cmp
                        yield %72
                }
                %42 = ternary %41 ? { : bool
                        %67 = const true : bool
                        yield %67
                } : {
                        %64 = load %28 : s32i, align 4
                        %65 = const 6 : s32i
                        cmp
                        yield %66
                }
                %43 = ternary %42 ? { : bool
                        %63 = const true : bool
                        yield %63
                } : {
                        %60 = load %29 : s32i, align 4
                        %61 = const 7 : s32i
                        cmp
                        yield %62
                }
                %44 = ternary %43 ? { : bool
                        %59 = const true : bool
                        yield %59
                } : {
                        %56 = load %30 : s32i, align 4
                        %57 = const 8 : s32i
                        cmp
                        yield %58
                }
                %45 = ternary %44 ? { : bool
                        %55 = const true : bool
                        yield %55
                } : {
                        %52 = load %31 : s32i, align 4
                        %53 = const 9 : s32i
                        cmp
                        yield %54
                }
                %46 = ternary %45 ? { : bool
                        %51 = const true : bool
                        yield %51
                } : {
                        %48 = load %32 : s32i, align 4
                        %49 = const 10 : s32i
                        cmp
                        yield %50
                }
                if %46 {
                        %47 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn foo(%arg0: rec_baz*, %arg1: s8i**) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_baz*, %arg1: s8i**):
        %19 = load %arg0 : rec_baz
        %20 = alloca rec_baz, "x", align 4
        %21 = alloca s8i**, "y", align 8
        store %19, %20
        store %arg1, %21
        %22 = const 6 : s32i
        %23 = const 7 : s32i
        %24 = const 8 : s32i
        %25 = const 9 : s32i
        %26 = const 10 : s32i
        call @bar(%20, %22, %23, %24, %25, %26) [all]
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_baz, "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        get_member
        store %3, %4, align 4
        %5 = const 2 : s32i
        get_member
        store %5, %6, align 4
        %7 = const 3 : s32i
        get_member
        store %7, %8, align 4
        %9 = const 4 : s32i
        get_member
        store %9, %10, align 4
        %11 = const 5 : s32i
        get_member
        store %11, %12, align 4
        %13 = const #cir.ptr<null> : s8i**
        %14 = load %1 : rec_baz, align 4
        %15 = alloca rec_baz, "byval", align 8
        store %14, %15
        call @foo(%15, %13) [all]
        %16 = get_global @exit : (s32i) -> void*
        %17 = const 0 : s32i
        call @exit(%17) [all]
        %18 = load %0 : s32i
        return %18
}
