clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20000706_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20000706-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn bar(%arg3: rec_baz*, %arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i, %arg8: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: rec_baz*, %arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i, %arg8: s32i):
        %29 = alloca rec_baz*, "x", align 8
        %30 = alloca s32i, "f", align 4
        %31 = alloca s32i, "g", align 4
        %32 = alloca s32i, "h", align 4
        %33 = alloca s32i, "i", align 4
        %34 = alloca s32i, "j", align 4
        store %arg3, %29
        store %arg4, %30
        store %arg5, %31
        store %arg6, %32
        store %arg7, %33
        store %arg8, %34
        scope {
                %35 = load %29 : rec_baz*, align 8
                get_member
                %37 = load %36 : s32i, align 4
                %38 = const 1 : s32i
                cmp
                %40 = ternary %39 ? { : bool
                        %93 = const true : bool
                        yield %93
                } : {
                        %88 = load %29 : rec_baz*, align 8
                        get_member
                        %90 = load %89 : s32i, align 4
                        %91 = const 2 : s32i
                        cmp
                        yield %92
                }
                %41 = ternary %40 ? { : bool
                        %87 = const true : bool
                        yield %87
                } : {
                        %82 = load %29 : rec_baz*, align 8
                        get_member
                        %84 = load %83 : s32i, align 4
                        %85 = const 3 : s32i
                        cmp
                        yield %86
                }
                %42 = ternary %41 ? { : bool
                        %81 = const true : bool
                        yield %81
                } : {
                        %76 = load %29 : rec_baz*, align 8
                        get_member
                        %78 = load %77 : s32i, align 4
                        %79 = const 4 : s32i
                        cmp
                        yield %80
                }
                %43 = ternary %42 ? { : bool
                        %75 = const true : bool
                        yield %75
                } : {
                        %70 = load %29 : rec_baz*, align 8
                        get_member
                        %72 = load %71 : s32i, align 4
                        %73 = const 5 : s32i
                        cmp
                        yield %74
                }
                %44 = ternary %43 ? { : bool
                        %69 = const true : bool
                        yield %69
                } : {
                        %66 = load %30 : s32i, align 4
                        %67 = const 6 : s32i
                        cmp
                        yield %68
                }
                %45 = ternary %44 ? { : bool
                        %65 = const true : bool
                        yield %65
                } : {
                        %62 = load %31 : s32i, align 4
                        %63 = const 7 : s32i
                        cmp
                        yield %64
                }
                %46 = ternary %45 ? { : bool
                        %61 = const true : bool
                        yield %61
                } : {
                        %58 = load %32 : s32i, align 4
                        %59 = const 8 : s32i
                        cmp
                        yield %60
                }
                %47 = ternary %46 ? { : bool
                        %57 = const true : bool
                        yield %57
                } : {
                        %54 = load %33 : s32i, align 4
                        %55 = const 9 : s32i
                        cmp
                        yield %56
                }
                %48 = ternary %47 ? { : bool
                        %53 = const true : bool
                        yield %53
                } : {
                        %50 = load %34 : s32i, align 4
                        %51 = const 10 : s32i
                        cmp
                        yield %52
                }
                if %48 {
                        %49 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn foo(%arg0: s8i*, %arg1: rec_baz*, %arg2: s8i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: rec_baz*, %arg2: s8i*):
        %20 = load %arg1 : rec_baz
        %21 = alloca s8i*, "z", align 8
        %22 = alloca rec_baz, "x", align 4
        %23 = alloca s8i*, "y", align 8
        store %arg0, %21
        store %20, %22
        store %arg2, %23
        %24 = const 6 : s32i
        %25 = const 7 : s32i
        %26 = const 8 : s32i
        %27 = const 9 : s32i
        %28 = const 10 : s32i
        call @bar(%22, %24, %25, %26, %27, %28) [all]
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_baz, "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        get_member
        store %3, %4, align 4
        %5 = const 2 : s32i
        get_member
        store %5, %6, align 4
        %7 = const 3 : s32i
        get_member
        store %7, %8, align 4
        %9 = const 4 : s32i
        get_member
        store %9, %10, align 4
        %11 = const 5 : s32i
        get_member
        store %11, %12, align 4
        %13 = const #cir.ptr<null> : s8i*
        %14 = const #cir.ptr<null> : s8i*
        %15 = load %1 : rec_baz, align 4
        %16 = alloca rec_baz, "byval", align 8
        store %15, %16
        call @foo(%13, %16, %14) [all]
        %17 = get_global @exit : (s32i) -> void*
        %18 = const 0 : s32i
        call @exit(%18) [all]
        %19 = load %0 : s32i
        return %19
}
